--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: node:10-alpine # use nodejs v10 LTS
+image: docker.io/library/node:121.1.0-bullseye-slim
 cache:
   paths:
     - node_modules/
