--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: Byte Art
+subtitle: 'One byte, one world. '
 description: ''
 keywords:
-author: John Doe
+author: ele
 language: en
 timezone: ''
 
