--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Byte Art
 subtitle: 'One byte, one world. '
 description: ''
 keywords:
-author: ele
+author: John Doe
 language: en
 timezone: ''
 
