--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,13 +113,13 @@ build-front-end:
   stage: build-front-end
   variables:
     << : *vars
-  image: docker.io/library/node:21.1.0-bullseye-slim
+  image: docker.io/paketobuildpacks/yarn:1.2
   cache:
     paths:
       - node_modules/
   before_script:
-    - npm install
-    - npm build
+    - yarn install
+    - yarn build
   artifacts:
      paths:
        - $build_target_path
