--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          access_token: ${{ secrets.ACCESS_TOKEN }} 
+          token: ${{ secrets.ACCESS_TOKEN }} 
           branch: gh-pages
           folder: build
